feat(landing): refine Web App Showcase with Stockman Enterprise copy and new screenshot

--- a/landing-page/public/locales/en.json
+++ b/landing-page/public/locales/en.json
@@ -152,8 +152,8 @@
         "copyright": "© 2026 Stockman. All rights reserved."
     },
     "web_app": {
-        "title": "Stockman Web: Power Management on Large Screens",
-        "subtitle": "Access all your data, manage your stocks, and analyze your performance with unparalleled clarity from your computer or tablet.",
+        "title": "Experience Stockman Enterprise: AI-Powered Intelligent Management",
+        "subtitle": "Whether you are in retail or logistics, simplify your operations with our unified platform. A powerful web dashboard and mobile app for your staff to monitor activities through essential KPIs. From inventory to sales, maintain total 360° visibility.",
         "f1_title": "Multi-platform",
         "f1_desc": "Compatible with Windows, Mac, and Tablets via any browser.",
         "f2_title": "PWA Installation",
