--- a/landing-page/public/locales/fr.json
+++ b/landing-page/public/locales/fr.json
@@ -143,8 +143,8 @@
         "copyright": "© 2026 Stockman. Tous droits réservés."
     },
     "web_app": {
-        "title": "Stockman Web : La puissance de la gestion sur grand écran",
-        "subtitle": "Accédez à toutes vos données, gérez vos stocks et analysez vos performances avec une clarté inégalée depuis votre ordinateur ou tablette.",
+        "title": "Découvrez Stockman Enterprise : La gestion intelligente augmentée par l'IA",
+        "subtitle": "Que vous soyez dans le commerce ou la logistique, simplifiez vos processus grâce à notre plateforme unifiée. Un site web puissant et une application mobile pour vos équipes pour piloter votre activité via des KPIs stratégiques. Des stocks aux ventes, gardez une visibilité totale à 360°.",
         "f1_title": "Multi-plateforme",
         "f1_desc": "Compatible Windows, Mac et Tablettes via n'importe quel navigateur.",
         "f2_title": "Installation PWA",
