--- a/frontend/locales/de.json
+++ b/frontend/locales/de.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "abc": {
     "no_revenue": "In diesem Zeitraum wurde kein Umsatz erzielt.",
     "not_enough_data": "Nicht genügend Verkaufsdaten für die ABC-Analyse vorhanden."
@@ -781,7 +781,9 @@
     "widget_reorder": "Réapprovisionnement",
     "widget_smart_reminders": "Rappels intelligents",
     "widget_stock_chart": "Évolution valeur stock",
-    "widget_stock_status": "Statut des stocks"
+    "widget_stock_status": "Statut des stocks",
+    "daily_report": "Tagesbericht",
+    "top_products_today": "Top-Produkte heute"
   },
   "delivery": {
     "ai_analysis": "AI Analysis of products...",
