--- a/frontend/locales/pt.json
+++ b/frontend/locales/pt.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "abc": {
     "no_revenue": "Nenhuma receita gerada neste período.",
     "not_enough_data": "Dados de vendas insuficientes para a análise ABC."
@@ -781,7 +781,9 @@
     "widget_reorder": "Réapprovisionnement",
     "widget_smart_reminders": "Rappels intelligents",
     "widget_stock_chart": "Évolution valeur stock",
-    "widget_stock_status": "Statut des stocks"
+    "widget_stock_status": "Statut des stocks",
+    "daily_report": "Relatório diário",
+    "top_products_today": "Principais produtos hoje"
   },
   "delivery": {
     "ai_analysis": "AI Analysis of products...",
